# tinykvm_examples

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE  README.md  compute.json  kvm_api.h  run.sh  upload_programs.sh
.github/workflows/: c.yml  cpp.yml  kotlin.yml  nelua.yml  nim.yml  python.yml  quickjs.yml  rust.yml  zig.yml
assets/: waterfall.avif
c/: build_and_upload.sh  counter.c  dns.c  fetch.c  hello_world.c  scounter  storage.c  streaming.c
c/zlib/: CMakeLists.txt  build_and_upload.sh  zlib.c
c/zstd/: CMakeLists.txt  build_and_upload.sh  zstd.c
cpp/: .gitignore  CMakeLists.txt  build.sh  build_and_upload.sh
cpp/avif/: CMakeLists.txt  build_and_upload.sh
cpp/avif/src/: avif-ffi.cpp  avif.cpp
cpp/base64/: CMakeLists.txt  build_and_upload.sh
cpp/base64/src/: base64.cpp
cpp/collector/: build.sh  collector.cpp  storage.cpp
cpp/gbc/: CMakeLists.txt  build_and_upload.sh
cpp/gbc/src/: kvm_api.h  kvm_api.hpp  main.cpp
cpp/llama/: CMakeLists.txt  build_and_upload.sh
cpp/llama/src/: llama.cpp
cpp/minimal/: build.sh  minimal.cpp  storage.cpp
cpp/sd/: CMakeLists.txt  build_and_upload.sh
cpp/sd/src/: sd.cpp  stb_image.h  stb_image_write.h
cpp/shared_counter/: build.sh  shared_counter.cpp
cpp/sqlite/: CMakeLists.txt  build_and_upload.sh
cpp/sqlite/src/: sql.cpp
cpp/src/: basicauth.cpp  deflate.cpp  espeak.cpp  fetch.cpp  hello_frontend.cpp  hello_world.cpp  kvm_api.hpp  minify.cpp  payload.cpp  to_string.cpp
cpp/thumbnail/: CMakeLists.txt  build_and_upload.sh
cpp/thumbnail/src/: thumbnails.cpp
cpp/webp/: .gitignore  CMakeLists.txt  build_and_upload.sh  libjpeg-turbo
cpp/webp/src/: decode_jpeg.cpp  decode_webp.cpp  helpers.hpp  kvm_api.h  load_file.cpp  webp.cpp
cpp/xml/: CMakeLists.txt  build_and_upload.sh
cpp/xml/src/: xml.cpp
cpp/zstd/: CMakeLists.txt  build_and_upload.sh
cpp/zstd/src/: zstd.cpp
deno/: autobuild.sh  avif.ts  build.sh  clock.ts  image.ts  main.ts  server.ts  simple.ts  varnish-deno.c  varnish-deno.json
go/: .gitignore  README.md  build.sh  go.work
go/avif/: avif.go  go.mod  go.sum
go/goexample/: go.mod  goexample.go
go/varnish/: api.go  go.mod  goapi.h  kvm_api.c
javascript/: CMakeLists.txt  README.md  aliases.txt  build_and_upload.sh  static_builder.py
javascript/src/: chat.js  crc32.h  eval.js  http.c  main.c
javascript/www/: index.html
kotlin/: .gitignore  build_and_upload.sh  interop.sh  kvm_api.def  main.kt  varnish.kt
kotlin/env/: main.c
nelua/: build_and_upload.sh  example.nelua  varnish.nelua
nelua/env/: kvm_api.h  main.c
nim/: .gitignore  auth.nim  build_and_upload.sh  debug.sh  hello.nim  prefetch_task.nim  start_gdb.sh  storage_example.nim  test_jwt.sh  test_watermark.sh  watermark.nim
nim/env/: http.c  http.h  main.c  varnish.nim
python/: .gitignore  README.md  build.sh  program.py  python.c  run.sh
rust/: README.md
rust/.cargo/: config.toml
rust/api/: varnish.rs
rust/collector/: Cargo.toml  build_and_upload.sh
rust/collector/src/: main.rs
rust/png/: Cargo.toml  build_and_upload.sh
rust/png/src/: main.rs
rust/static/: Cargo.toml  README.md
rust/static/.cargo/: config
rust/static/src/: main.rs
rust/tokio/: Cargo.toml  README.md  build.sh
rust/tokio/src/: main.rs  varnish.rs
scripts/: liveupdate_spam.sh  measure_fetch.sh
v8/: CMakeLists.txt  build.sh
v8/src/: computeV8.cc
zig/: .gitignore  build_and_upload.sh  debug.gdb  example.zig  kvm_api.h
